--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ body {
   flex-direction: column;
 }
 
+.image-container {
+  padding-top: 100px;
+}
 .image-container img {
   width: 220px;
 }
@@ -102,4 +105,11 @@ input {
   padding: 0 30px;
   color: var(--primary-color);
   font-size: 14px;
+}
+
+@media screen and (max-width: 480px) {
+  .heading-name,
+  .currency-container {
+    padding: 20px;
+  }
 }
